# mini-nvme

./: .bazelrc  BUILD  CMakeLists.txt  WORKSPACE
example/: nvme_init.cpp
include/: mini_nvme.h  nvme_spec.h
scripts/: init_hugetlbfs.sh
src/: device.cpp  memory.cpp  memory.h  mini_nvme.cpp  pci.cpp
test/: mini_nvme_unittest.cpp
